force-app/main/default/objects/AssetMgmt__c/AssetMgmt__c.object-meta.xml
<CustomObject>
    <description>The Crown Commercial Service Asset Management System</description>
    <label>CCS Asset</label>
    <nameField>
        <displayFormat>IA{0000}</displayFormat>
        <label>Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCS Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>