force-app/main/default/objects/AssetMgmt__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>IA_Contract__r.New_End_Date__c</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>