force-app/main/default/objects/AssetMgmt__c/fields/IA_Approved__c.field-meta.xml
<CustomField>
    <fullName>IA_Approved__c</fullName>
    <label>Approved</label>
    <length>40</length>
    <type>Text</type>
</CustomField>