force-app/main/default/objects/AssetMgmt__c/fields/IA_Contract__c.field-meta.xml
<CustomField>
    <fullName>IA_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>CCS_Contract__c</referenceTo>
    <relationshipLabel>CCS Assets</relationshipLabel>
    <relationshipName>CCS_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>