force-app/main/default/objects/AssetMgmt__c/fields/IA_Disp_Date_Erased__c.field-meta.xml
<CustomField>
    <fullName>IA_Disp_Date_Erased__c</fullName>
    <label>Date Erased</label>
    <type>Date</type>
</CustomField>