force-app/main/default/objects/AssetMgmt__c/fields/IA_Disp_Status__c.field-meta.xml
<CustomField>
    <fullName>IA_Disp_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>