force-app/main/default/objects/AssetMgmt__c/fields/IA_Disposing_Organisation__c.field-meta.xml
<CustomField>
    <fullName>IA_Disposing_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposing Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AssetMgmt1</relationshipName>
    <type>Lookup</type>
</CustomField>