force-app/main/default/objects/AssetMgmt__c/fields/IA_Google_Drive__c.field-meta.xml
<CustomField>
    <fullName>IA_Google_Drive__c</fullName>
    <inlineHelpText>Please enter the URL for the Google Drive folder where Purchase Orders, Invoices and Agreement documents are stored</inlineHelpText>
    <label>Google Drive</label>
    <type>Url</type>
</CustomField>