force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Accred_Days_to_Expiry__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Accred_Days_to_Expiry__c</fullName>
    <formula>IA_Gov_Accreditation_Review__c  - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accreditation Days to Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>