force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Accreditation_Required__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Accreditation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accreditation Required</label>
    <type>Checkbox</type>
</CustomField>