force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Accreditation_Review__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Accreditation_Review__c</fullName>
    <description>Date that the asset achieved accreditation</description>
    <label>Accreditation Expiry</label>
    <type>Date</type>
</CustomField>