force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>