force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Business_Area__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Business_Area__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small Business Policy</fullName>
            </value>
            <value>
                <fullName>EU/International &amp; Domestic</fullName>
            </value>
            <value>
                <fullName>FOI &amp; Parliamentary Correspondance</fullName>
            </value>
            <value>
                <fullName>Mystery Shopper</fullName>
            </value>
            <value>
                <fullName>Commissioning Academy</fullName>
            </value>
            <value>
                <fullName>Disputes and Policy Implementation</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Estates</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
            </value>
            <value>
                <fullName>Business Planning</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Business Implementation</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Change &amp; Transformation</fullName>
            </value>
            <value>
                <fullName>Transformation</fullName>
            </value>
            <value>
                <fullName>Customer Relations</fullName>
            </value>
            <value>
                <fullName>Business Performance</fullName>
            </value>
            <value>
                <fullName>HR Operations</fullName>
            </value>
            <value>
                <fullName>Contract &amp; Supplier Management</fullName>
            </value>
            <value>
                <fullName>Performance &amp; Supplier Assurance</fullName>
            </value>
            <value>
                <fullName>SCM - Corporate Solutions</fullName>
            </value>
            <value>
                <fullName>SCM - Buildings</fullName>
            </value>
            <value>
                <fullName>SCM - People</fullName>
            </value>
            <value>
                <fullName>SCM - Technology</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Sourcing Operations</fullName>
            </value>
            <value>
                <fullName>Service Operations</fullName>
            </value>
            <value>
                <fullName>Category Services</fullName>
            </value>
            <value>
                <fullName>Savings Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>