force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Business_Case_Authoriser__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Business_Case_Authoriser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Case Authoriser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssetMgmt_BCA</relationshipName>
    <type>Lookup</type>
</CustomField>