force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Certificate_Number__c</fullName>
    <label>PSN Certificate Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>