force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Creation_Date__c</fullName>
    <inlineHelpText>Date the system was in use</inlineHelpText>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>