force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Cyber_Essentials__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Cyber_Essentials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cyber Essentials</label>
    <type>Checkbox</type>
</CustomField>