force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Cyber_Essentials_Certificate__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Cyber_Essentials_Certificate__c</fullName>
    <label>Cyber Essentials Certificate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>