force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Cyber_Essentials_Type__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Cyber_Essentials_Type__c</fullName>
    <label>Cyber Essentials Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>