force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Data_Type__c</fullName>
    <label>Personal Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Personal Sensitive</fullName>
            </value>
            <value>
                <fullName>Unclassified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>