force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Delegated_IAO__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Delegated_IAO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated IAO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssetMgmt_IAO</relationshipName>
    <type>Lookup</type>
</CustomField>