force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Delivery_Partner__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Delivery_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Partners are defined as any organisations with which a department works to deliver their objectives, with a formal agreement of roles (contract, funding agreement, Service Level Agreement etc). There may often be a long-term relationship.</inlineHelpText>
    <label>Delivery Partner</label>
    <type>Checkbox</type>
</CustomField>