force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Deployment_Model__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Deployment_Model__c</fullName>
    <label>Deployment Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IA_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>