force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Description__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>