force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Exempt_Fair_Processing__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Exempt_Fair_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Processed for National Security Purposes or is a Legal requirement</inlineHelpText>
    <label>Exempt Fair Processing</label>
    <type>Checkbox</type>
</CustomField>