force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_External_Users__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_External_Users__c</fullName>
    <inlineHelpText>Non-CCS staff eg. Suppliers or Customer Departments</inlineHelpText>
    <label>External Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>