force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Framework__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipName>AssetMgmt_Framework</relationshipName>
    <type>Lookup</type>
</CustomField>