force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_GSC_Classification__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_GSC_Classification__c</fullName>
    <inlineHelpText>Government Security Classifications for Data</inlineHelpText>
    <label>GSC Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Official</fullName>
            </value>
            <value>
                <fullName>Official Sensitive</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Secret</fullName>
            </value>
            <value>
                <fullName>Unclassified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>