force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_ICO_Notification__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_ICO_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Data processing purpose covered by the CCS ICO Notification</inlineHelpText>
    <label>ICO Notification</label>
    <type>Checkbox</type>
</CustomField>