force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Internal_Users__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Internal_Users__c</fullName>
    <inlineHelpText>This is used when there are many CCS users of an asset and &apos;Main User&apos; is not sufficient.</inlineHelpText>
    <label>Internal Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>