force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_IPA_Review_Conducted__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_IPA_Review_Conducted__c</fullName>
    <label>PIA Review Conducted</label>
    <type>Date</type>
</CustomField>