force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_ISO27001__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_ISO27001__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISO27001</label>
    <type>Checkbox</type>
</CustomField>