force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_ISO27001_Certificate__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_ISO27001_Certificate__c</fullName>
    <label>ISO27001 Certificate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>