force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Mitigations__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Mitigations__c</fullName>
    <label>Mitigations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>