force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Non_UK_Established__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Non_UK_Established__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Data controller is based/established outside of the UK e.g. Basware in Finland</inlineHelpText>
    <label>Non-UK Established</label>
    <type>Checkbox</type>
</CustomField>