force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_PIA_Review_Days_Expiry__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_PIA_Review_Days_Expiry__c</fullName>
    <formula>IA_Gov_PIA_Review_Expiry__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIA Days to Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>