force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_PIA_Review_Expiry__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_PIA_Review_Expiry__c</fullName>
    <label>PIA Review Expiry</label>
    <type>Date</type>
</CustomField>