force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Processing_Data_for_UK__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Processing_Data_for_UK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processing Data for UK</label>
    <type>Checkbox</type>
</CustomField>