force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_PSN_as_a_Requirement__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_PSN_as_a_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSN as a Requirement</label>
    <type>Checkbox</type>
</CustomField>