force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Review_Outcome__c</fullName>
    <label>Review Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>