force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Risk_to_Asset__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Risk_to_Asset__c</fullName>
    <label>Risk to Asset</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>