force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Service__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Service__c</fullName>
    <description>Service Name</description>
    <inlineHelpText>This is the &apos;Title&apos; of the asset such as: MacBook or eSourcing</inlineHelpText>
    <label>Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>