force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Service_Classification__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Service_Classification__c</fullName>
    <label>Service Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Facing</fullName>
            </value>
            <value>
                <fullName>Revenue Recording</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
            <value>
                <fullName>Directorate Function</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>