force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_SIRO_OGCSIRO__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_SIRO_OGCSIRO__c</fullName>
    <label>SIRO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Granted</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>