force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_SIRO_OGCSIRO_Grant_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_SIRO_OGCSIRO_Grant_Date__c</fullName>
    <label>SIRO Grant Date</label>
    <type>Date</type>
</CustomField>