force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Specific_Requirements__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Specific_Requirements__c</fullName>
    <label>Specific Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>