force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Supplier_Type__c</fullName>
    <inlineHelpText>Prime Supplier - Supplier who the CCS has a contract with

Third Party - Subcontractors that CCS don’t have a contract or formal agreement with but are part of the supply chain under contract to the Prime Supplier or Delivery Partner</inlineHelpText>
    <label>Supplier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime Supplier</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>