force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Third_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Subcontractors that CCS don’t have a contract or formal agreement with but are part of the supply chain under contract to the Prime Supplier or Delivery Partner</inlineHelpText>
    <label>Third Party</label>
    <type>Checkbox</type>
</CustomField>