force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Type__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Hosting</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Hosting &amp; System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>