force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_UK_Established__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_UK_Established__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Data controller established in the UK</inlineHelpText>
    <label>UK Established</label>
    <type>Checkbox</type>
</CustomField>