force-app/main/default/objects/AssetMgmt__c/fields/IA_Gov_Use_of_Cookies_Spyware_Java__c.field-meta.xml
<CustomField>
    <fullName>IA_Gov_Use_of_Cookies_Spyware_Java__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use of Cookies/Spyware/Java</label>
    <type>Checkbox</type>
</CustomField>