force-app/main/default/objects/AssetMgmt__c/fields/IA_Hard_Category__c.field-meta.xml
<CustomField>
    <fullName>IA_Hard_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Client Device</fullName>
            </value>
            <value>
                <fullName>Peripheral</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Software as a Service</fullName>
            </value>
            <value>
                <fullName>Infrastructure as a Service</fullName>
            </value>
            <value>
                <fullName>Platform as a Service</fullName>
            </value>
            <value>
                <fullName>Network Devices</fullName>
            </value>
            <value>
                <fullName>Managed Service</fullName>
            </value>
            <value>
                <fullName>Hybrid as a Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>