force-app/main/default/objects/AssetMgmt__c/fields/IA_Hard_Make__c.field-meta.xml
<CustomField>
    <fullName>IA_Hard_Make__c</fullName>
    <label>Make</label>
    <length>40</length>
    <type>Text</type>
</CustomField>