force-app/main/default/objects/AssetMgmt__c/fields/IA_Hard_Model__c.field-meta.xml
<CustomField>
    <fullName>IA_Hard_Model__c</fullName>
    <label>Model</label>
    <length>40</length>
    <type>Text</type>
</CustomField>