force-app/main/default/objects/AssetMgmt__c/fields/IA_Hard_NI__c.field-meta.xml
<CustomField>
    <fullName>IA_Hard_NI__c</fullName>
    <label>Network Identifier</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>