force-app/main/default/objects/AssetMgmt__c/fields/IA_Hard_SN__c.field-meta.xml
<CustomField>
    <fullName>IA_Hard_SN__c</fullName>
    <label>Serial Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>