force-app/main/default/objects/AssetMgmt__c/fields/IA_Hardware_Type__c.field-meta.xml
<CustomField>
    <fullName>IA_Hardware_Type__c</fullName>
    <label>Hardware Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IA_Hard_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Server</fullName>
            </value>
            <value>
                <fullName>Virtual Server</fullName>
            </value>
            <value>
                <fullName>Desktop Computer</fullName>
            </value>
            <value>
                <fullName>Laptop Computer</fullName>
            </value>
            <value>
                <fullName>Mobile Telephone</fullName>
            </value>
            <value>
                <fullName>Network Switch</fullName>
            </value>
            <value>
                <fullName>Router</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Keyboard/Mouse</fullName>
            </value>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>External Hard Drive</fullName>
            </value>
            <value>
                <fullName>VoIP Phone</fullName>
            </value>
            <value>
                <fullName>Analogue Phone</fullName>
            </value>
            <value>
                <fullName>Spider Phone</fullName>
            </value>
            <value>
                <fullName>Cloud Server</fullName>
            </value>
            <value>
                <fullName>Mobile WiFi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>