force-app/main/default/objects/AssetMgmt__c/fields/IA_Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Lease_End_Date__c</fullName>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>