force-app/main/default/objects/AssetMgmt__c/fields/IA_Lease_Organisation__c.field-meta.xml
<CustomField>
    <fullName>IA_Lease_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AssetMgmt</relationshipName>
    <type>Lookup</type>
</CustomField>