force-app/main/default/objects/AssetMgmt__c/fields/IA_Leased__c.field-meta.xml
<CustomField>
    <fullName>IA_Leased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Leased</label>
    <type>Checkbox</type>
</CustomField>