force-app/main/default/objects/AssetMgmt__c/fields/IA_Lifecycle__c.field-meta.xml
<CustomField>
    <fullName>IA_Lifecycle__c</fullName>
    <label>Lifecycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Mid-Contract</fullName>
            </value>
            <value>
                <fullName>End-of-Life</fullName>
            </value>
            <value>
                <fullName>Cabint Office</fullName>
                <isActive>false</isActive>
                <label>Cabint Office</label>
            </value>
            <value>
                <fullName>Forever</fullName>
                <isActive>false</isActive>
                <label>Forever</label>
            </value>
            <value>
                <fullName>Start up</fullName>
                <isActive>false</isActive>
                <label>Start up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>