force-app/main/default/objects/AssetMgmt__c/fields/IA_Location__c.field-meta.xml
<CustomField>
    <fullName>IA_Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>Norwich</fullName>
            </value>
            <value>
                <fullName>Newport</fullName>
            </value>
            <value>
                <fullName>London AVH</fullName>
            </value>
            <value>
                <fullName>London 1HGR</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Leeds</fullName>
            </value>
            <value>
                <fullName>Cloud Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>