force-app/main/default/objects/AssetMgmt__c/fields/IA_Main_User__c.field-meta.xml
<CustomField>
    <fullName>IA_Main_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the user of the asset?</inlineHelpText>
    <label>Main User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CCS_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>