force-app/main/default/objects/AssetMgmt__c/fields/IA_Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>IA_Parent_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this asset is linked to another, please enter the asset number here</inlineHelpText>
    <label>Parent Asset</label>
    <referenceTo>AssetMgmt__c</referenceTo>
    <relationshipLabel>CCS Assets</relationshipLabel>
    <relationshipName>CCS_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>