force-app/main/default/objects/AssetMgmt__c/fields/IA_Proc_Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>IA_Proc_Contract_Reference__c</fullName>
    <label>Contract Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>