force-app/main/default/objects/AssetMgmt__c/fields/IA_Proc_Days_to_Expiry__c.field-meta.xml
<CustomField>
    <fullName>IA_Proc_Days_to_Expiry__c</fullName>
    <formula>IA_Proc_PO_End_Date__c  - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Days to Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>