force-app/main/default/objects/AssetMgmt__c/fields/IA_Proc_Organisation__c.field-meta.xml
<CustomField>
    <fullName>IA_Proc_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Prc_Org</relationshipName>
    <type>Lookup</type>
</CustomField>