force-app/main/default/objects/AssetMgmt__c/fields/IA_Proc_PO_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Proc_PO_End_Date__c</fullName>
    <label>PO End Date</label>
    <type>Date</type>
</CustomField>