force-app/main/default/objects/AssetMgmt__c/fields/IA_Proc_PO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Proc_PO_Start_Date__c</fullName>
    <label>PO Start Date</label>
    <type>Date</type>
</CustomField>