force-app/main/default/objects/AssetMgmt__c/fields/IA_Soft_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>IA_Soft_Commencement_Date__c</fullName>
    <label>Commencement Date</label>
    <type>Date</type>
</CustomField>