force-app/main/default/objects/AssetMgmt__c/fields/IA_Soft_License_Information__c.field-meta.xml
<CustomField>
    <fullName>IA_Soft_License_Information__c</fullName>
    <label>License Information</label>
    <type>TextArea</type>
</CustomField>