force-app/main/default/objects/AssetMgmt__c/fields/IA_Soft_License_Type__c.field-meta.xml
<CustomField>
    <fullName>IA_Soft_License_Type__c</fullName>
    <label>License Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>