force-app/main/default/objects/AssetMgmt__c/fields/IA_Soft_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>IA_Soft_Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>