force-app/main/default/objects/AssetMgmt__c/fields/IA_Soft_No_of_Licenses__c.field-meta.xml
<CustomField>
    <fullName>IA_Soft_No_of_Licenses__c</fullName>
    <label>No of Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>