force-app/main/default/objects/AssetMgmt__c/fields/IA_Soft_Product__c.field-meta.xml
<CustomField>
    <fullName>IA_Soft_Product__c</fullName>
    <label>Product</label>
    <length>40</length>
    <type>Text</type>
</CustomField>